	o include bron-filter for boxAgeWeight plot + input-dependent age categories
	o percentage yearly shot animals grofwild: 
		include open-ended ribbons
	o fix tabs at top of page, include logo  	
0.2.3
	o percentage yearly shot animals grofwild: 
		include dutch month names;
		when afschotdatum = enddatum openingstijden, put in correct halfmonth 
	o add 'jaar' as variable for landkaar 2 wildschade
0.2.2
	o fix location points on landkaart 2 wildschade
0.2.1
	o fix legends for one level factors in wildschade plots 1 & 2
0.2.0
	o data update grofwild / wildschade 
	o update bio-indicator plot onderkaaklengte
	o include aesthetic "en" in titles
	o update graph grofwild - percentage jaarlijks afschot
0.1.24
	o teksten grofwild adjusted
	o teksten wildschade adjusted
	o titles graphs adjusted
0.1.23
	o set ymax to min 5 for absolute numbers in regio-schaal plot
0.1.22
	o format ticks to integer in regio-schaal plot
0.1.21
	o update openingstijden_grofwild.csv
	o default show map for landkaart 2 - wildschade
	o include type in filename for data export - grofwild
	o landkaart 1  sliders start at 2018 - wildschade
	o bio-indicator: Onderkaaklengte per jaar - sliders correct now - grofwild 
	o 5UTM starts at 2014 - grofwild
0.1.20
	o update readme.md for extdata
	o remove default selection species/schade type in wildschade
	o upgrade labels for schade voertuig
	o include median, min, max in data export percentage jaarlijks afschot - grofwild 
	o add percentage of total data map - grofwild
0.1.19
	o update landkaart 2 wildschade to satellite background
0.1.18
	o include check for new schadecodes
	o update fullNames() to deal with non matching names
0.1.17
	o include package version in app title and browser tabpage title
0.1.16
	o 2-step approach for grofwild download map to prevent time-out
	o fix 'voeg landkaart toe'-button for landkaart 2 in wildschade 
0.1.15
    o grofwild includes 5x5 utm regionlevel for map
0.1.14
    o fix INBO title next to tabs