@@ -25,7 +25,7 @@ RUN  apt-get update && apt-get install -y software-properties-common && \
      add-apt-repository ppa:ubuntugis/ppa
 
 # install imports of reporting-grofwild app that are not on cloud
-RUN R -e "install.packages(c('shiny', 'sp', 'plotly', 'plyr', 'devtools', 'methods', 'reshape2', 'mgcv', 'rgdal', 'rgeos', 'shinycssloaders', 'raster'), repos = 'https://cloud.r-project.org/')"
+RUN R -e "install.packages(c('shiny', 'sp', 'plotly', 'plyr', 'devtools', 'methods', 'reshape2', 'mgcv', 'rgdal', 'rgeos', 'shinycssloaders', 'raster', 'stringr'), repos = 'https://cloud.r-project.org/')"
 RUN R -e "devtools::install_github('inbo/INBOtheme')"
 RUN R -e "install.packages('https://cran.r-project.org/src/contrib/Archive/DT/DT_0.12.tar.gz', repos = NULL, type = 'source')"
 
