@@ -91,6 +91,7 @@ importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,update)
+importFrom(stringr,str_sort)
 importFrom(utils,read.csv)
 importFrom(utils,tail)
 importFrom(utils,write.csv)
